# hydra

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.ml.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build.yml  bump-romulus.yml  ci.yml
config/: backtest.yaml
config/grafana/: hydra-overview.json  hydra-system.json
config/strategies/: breakout.yaml  dual_sma_trend_follower.yaml  mean_reversion_bb.yaml  momentum_rsi_macd.yaml  research_bb_mean_reversion.yaml  research_donchian_breakout.yaml  research_momentum_extremes.yaml  research_sma_trend.yaml  rsi_macd_multi_confirmation.yaml  rsi_momentum_crossover.yaml  test_strategy_05909b.yaml  test_strategy_09e978.yaml  test_strategy_270e2c.yaml  test_strategy_6dddaf.yaml  test_strategy_8199e2.yaml  test_strategy_91fa9e.yaml  test_strategy_b40366.yaml  test_strategy_c1f880.yaml  test_strategy_e1cd1b.yaml  test_strategy_f1a251.yaml  test_strategy_f6b1ec.yaml  trend_supertrend.yaml
config/templates/: breakout_volume.yaml  dca_aggressive.yaml  dca_conservative.yaml  grid_btc_range.yaml  mean_reversion_bb.yaml  momentum_rsi.yaml  multi_indicator.yaml  trend_sma_crossover.yaml
dashboard/: eslint.config.mjs  next.config.ts  package-lock.json  package.json
dashboard/public/: manifest.json
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/app/backtest/: chart-utils.tsx  page.tsx
dashboard/src/app/builder/: page.tsx
dashboard/src/app/models/: page.tsx
dashboard/src/app/optimize/: page.tsx
dashboard/src/app/portfolio/: page.tsx
dashboard/src/app/risk/: page.tsx
dashboard/src/app/settings/: page.tsx
dashboard/src/app/strategies/: page.tsx
dashboard/src/app/templates/: page.tsx
dashboard/src/app/trading/: page.tsx
dashboard/src/components/builder/: ConditionBuilder.tsx  ConditionRow.tsx  IndicatorPicker.tsx  RiskConfigurator.tsx  RuleSection.tsx  SavedStrategies.tsx  SignalPreview.tsx  StrategyNameDialog.tsx  TimeframeSelector.tsx  index.ts  types.ts
dashboard/src/components/icons/: HydraLogo.tsx
dashboard/src/components/layout/: AppLayout.tsx  BottomTabBar.tsx  Header.tsx  Sidebar.tsx  ThemeProvider.tsx  index.ts
dashboard/src/components/settings/: ExchangeConnectDialog.tsx
dashboard/src/components/ui/: Button.tsx  DataCard.tsx  ErrorCard.tsx  Input.tsx  Select.tsx  StatusBadge.tsx  Table.tsx  Toast.tsx  index.ts
dashboard/src/hooks/: useKeyboardShortcuts.ts
dashboard/src/lib/: api.ts  logger.ts
deploy/: compose.yml
docker/: Dockerfile.backtest  Dockerfile.dashboard  Dockerfile.engine  Dockerfile.ml
docker/backtest/: Dockerfile
docker/dashboard/: Dockerfile
docker/engine/: Dockerfile
docker/ml/: Dockerfile
scripts/: download_history.py  seed_db.py  sync_models.py
src/hydra/: __init__.py
src/hydra/backtest/: __init__.py  fills.py  hyperopt.py  metrics.py  runner.py  vectorbt_research.py  walkforward.py
src/hydra/core/: __init__.py  config.py  encryption.py  event_bus.py  events.py  logging.py  protocols.py  time.py  types.py  websocket.py
src/hydra/dashboard/: __init__.py  api.py  metrics.py  telegram.py
src/hydra/dashboard/routes/: __init__.py  backtest.py  builder.py  market_data.py  models.py  portfolio.py  risk.py  signals.py  strategies.py  strategy_builder.py  system.py  templates.py  trading.py
src/hydra/data/: __init__.py  backfill.py  ingestion.py  news.py  normalizer.py  sentiment.py  storage.py
src/hydra/data/migrations/: __init__.py  env.py
src/hydra/execution/: __init__.py  exchange_client.py  order_manager.py  paper_trading.py  session_manager.py
src/hydra/indicators/: __init__.py  custom.py  library.py
src/hydra/ml/: __init__.py  export.py  features.py  registry.py  retraining.py  serving.py  training.py
src/hydra/ops/: notifications.py
src/hydra/portfolio/: __init__.py  models.py  pnl.py  positions.py  reconciliation.py
src/hydra/risk/: __init__.py  circuit_breakers.py  exchange_safety.py  market_data.py  pretrade.py  sizing.py
src/hydra/strategy/: __init__.py  base.py  condition_schema.py  config.py  context.py  engine.py  indicator_registry.py  rule_engine.py
src/hydra/strategy/builtin/: __init__.py  breakout.py  composite.py  dca.py  grid.py  mean_reversion.py  ml_ensemble.py  (+3 more)
tests/: conftest.py
tests/e2e/: conftest.py  test_backtest_parity.py  test_circuit_breaker_flow.py  test_ml_overlay.py  test_multi_strategy.py  test_no_code_builder.py  test_signal_to_order.py
tests/factories/: __init__.py
tests/integration/: conftest.py  test_event_bus_redis.py  test_strategy_hot_reload.py
tests/performance/: conftest.py  test_backtest_speed.py  test_event_bus_throughput.py
tests/unit/test_backtest/: test_fills.py  test_metrics.py  test_runner.py  test_walkforward.py
tests/unit/test_core/: test_config.py  test_event_bus_memory.py  test_events.py  test_time.py  test_types.py
tests/unit/test_dashboard/: test_api_app.py  test_api_routes.py  test_backtest_routes.py  test_builder_routes.py  test_lazy_init.py  test_metrics.py  test_portfolio_routes.py  test_risk_config_routes.py  test_session_detail_routes.py  test_strategies_routes.py  test_system_routes.py  test_telegram.py  test_trading_routes.py
tests/unit/test_data/: test_backfill.py  test_normalizer.py  test_storage.py
tests/unit/test_execution/: test_deduplication.py  test_order_manager.py  test_paper_persistence.py  test_paper_trading.py  test_session_manager.py
tests/unit/test_indicators/: __init__.py  test_momentum.py  test_trend.py  test_volatility.py  test_volume.py
tests/unit/test_ml/: test_drift.py  test_export.py  test_features.py  test_inference.py  test_registry.py  test_training.py
tests/unit/test_portfolio/: test_pnl.py  test_positions.py  test_reconciliation.py
tests/unit/test_risk/: test_circuit_breakers.py  test_exchange_safety.py  test_pretrade.py  test_sizing.py
tests/unit/test_strategy/: __init__.py  test_base.py  test_builtin_momentum.py  test_builtin_rule_based.py  test_dca.py  test_engine.py  test_grid.py  test_indicator_registry.py  test_param_override.py
(+7 files in other folders)
